<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <TextView
        android:id="@+id/logintext_id"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:fontFamily="@font/kotta_one"
        android:text="@string/greetings"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="72dp"
        />
    <EditText
        android:layout_width="268dp"
        android:layout_height="62dp"
        android:id="@+id/login_email_id"
        android:layout_marginTop="87dp"
        android:layout_marginStart="42dp"
        android:hint="@string/Email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/kurale"
        />
    <EditText
        android:layout_width="268dp"
        android:layout_height="62dp"
        android:id="@+id/login_password_id"
        android:hint="@string/password"
        android:layout_marginStart="42dp"
        android:layout_marginTop="33dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/kurale"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_button_id"
        android:text="@string/forgot"
        android:textSize="22sp"
        android:fontFamily="@font/kurale"
        android:background="@color/transparent"
        android:layout_marginStart="124dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="30dp"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:textSize="26sp"
        android:fontFamily="@font/kurale"
        />
    <Button
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_signup_button"
        android:text="@string/newuser"
        android:textColor="@color/white"
        android:fontFamily="@font/kurale"
        android:padding="20dp"
        android:textSize="16sp"
        android:background="@color/transparent"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"/>



</LinearLayout>