<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/signup_bg">
    <TextView
        android:id="@+id/signup_id"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:fontFamily="@font/kotta_one"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="45dp"
        />
    <EditText
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:id="@+id/signup_username_id"
        android:layout_marginTop="41dp"
        android:layout_marginStart="45dp"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/kurale"
        />
    <EditText
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:id="@+id/signup_password_id"
        android:hint="@string/password"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/kurale"
        />
    <EditText
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:id="@+id/signup_confirm_password_id"
        android:hint="@string/confirmpassword"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/kurale"
        />
    <EditText
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:id="@+id/signup_email_id"
        android:hint="@string/Email"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/kurale"
        />
    <EditText
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:id="@+id/signup_city_id"
        android:hint="@string/city"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/kurale"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="30dp"
        android:id="@+id/signup_button_id"
        android:text="@string/signup"
        android:textSize="26sp"
        android:fontFamily="@font/kurale"
        />
    <Button
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:id="@+id/olduser_button"
        android:text="@string/olduser"
        android:textColor="@color/white"
        android:fontFamily="@font/kurale"
        android:padding="20dp"
        android:textSize="16sp"
        android:background="@color/transparent"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"/>



</LinearLayout>